remove debug code from childnav. fix spacing on dss_section

--- a/src/sass/components/category_header.scss
+++ b/src/sass/components/category_header.scss
@@ -3,7 +3,6 @@
 		margin-top: 5rem;
 	}
 	margin-top: 2rem;
-	margin-bottom: 2rem;
 }
 
 .guides-category-header-description {
