--- a/src/sass/components/childnav.scss
+++ b/src/sass/components/childnav.scss
@@ -17,19 +17,6 @@
 	}
 }
 
-////debug - remove before flight!
-
-.childnav pre {
-	font-size: 0.5rem;
-}
-
-.childnav__debug {
-	opacity: 0.5;
-	display: none;
-}
-
-///////
-
 .guideschildnav__item {
 	font-size: 0.8rem;
 }
