--- a/src/sass/components/dss_section.scss
+++ b/src/sass/components/dss_section.scss
@@ -30,7 +30,6 @@
 
 .dss-section__text {
 	max-width: 37rem;
-	margin-top: 2rem;
 	margin-bottom: 3rem;
 }
 
